Complete text screen migration